--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Facebook - Server</title>
+  <script type="module">
+    import { io } from 'https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.esm.min.js'
+
+    const socket = io()
+
+    socket.on('connected', () => console.log('connected'))
+    socket.on('disconnect', () => console.log('disconnected'))
+  </script>
 </head>
 <body>
   <h1>Server</h1>
