--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Facebook Clone</title>
-    <script type="module" src="/src/main.jsx" defer />
-    <link rel="icon" type="image/svg+xml" href="/iconss/icon.svg" />
-  </head>
-  <body>
-    <div id="root" />
+    <link rel="icon" type="image/svg+xml" href="/icons/icon.svg" />
+    </head>
+    <body>
+      <div id="root" />
+      <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
